﻿$Revision$
	$Author$ $Date$
	1. gcc warnings

#Revision: 1606
	#Author: ctapmex Date: 2010-11-01 17:11:28 +0500 (Пн, 01 ноя 2010)
	1. функция ParserFactory::countHRD для получения количества загруженных схем 

#Revision: 1603 $
	#Author: ctapmex Date: 2010-10-31 22:13:57 +0500 (Вс, 31 окт 2010)
	1. утечки памяти

#Revision: 1600
	#Author: ctapmex Date: 2010-10-30 00:21:15 +0600 (Сб, 30 окт 2010)
	1. загрузка нода из hrd-sets вынесена в отдельную функцию. Понадобится для подгрузки
	 своих тем.
	2. docbuilder и catalog вынесены из членов класса ParserFactory. Удаляем их сразу как прочитали.

#Revision: 1599
	#Author: ctapmex Date: 2010-10-27 17:18:17 +0600 (Ср, 27 окт 2010)
	1. при пустом значении параметра log-location в catalog.xml пораждалось исключение.
	 Зачем? проверим сразу. и логи в отладчике чисты.

#Revision: 1597
	#Author: ctapmex Date: 2010-10-26 10:09:08 +0600 (Вт, 26 окт 2010)
	1. warnings в malloc.c при сборке x64. спасибо 2useven10, патчи были высланы автору malloc.c.

#Revision: 1588
	#Author: ctapmex Date: 2010-10-25 13:24:30 +0600 (Пн, 25 окт 2010)
	1. убраны warnings
	2. исправлена ошибка в определении работы 32 битной библиотеки под 64 битной операционкой.

#Revision: 1571
	#Author: ctapmex Date: 2010-10-14 00:06:19 +0600 (Чт, 14 окт 2010)
	1. вынес вызов getenv на уровень выше,зачем часто дергать системную функцию

#Revision: 1570
	#Author: ctapmex Date: 2010-10-13 23:25:14 +0600 (Ср, 13 окт 2010)
	1. поиск модуля colorer_x64 на 64 битной системе
	2. stack overflow из 1563 устранен для всех режимов фара (только win). Хак, но работает.

#Revision: 1566
	#Author: ctapmex Date: 2010-10-07 16:00:01 +0600 (Чт, 07 окт 2010)
	1. 1563 проверено на x64 - небольшая поправка. На моих комьютерах как под x86, так и под x64 перестало
	падать, строка просто не раскрашена до конца. !!НО , даный метод не работает если запустить x86 фар, 
	на x64 операционке.  Адресация не та. Пока так.

#Revision: 1563